# humandesign_api

./: .dockerignore  .env_example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Dockerfile  README.md  api.py  chart.py  convertJSON.py  current_response.json  dependencies.py  docker-compose.yml  geocode.py  hd_constants.py  hd_data.sqlite  hd_features.py  openapi.yaml  pyproject.toml  random_response.json  requirements.txt
.docs/: .docker_README.md  DEV_KNOWLEDGEBASE.md  Project_Architecture_Blueprint.md  build_docker.sh  reduce_docker_size.md  release_to_github.sh  update_hub_desc.py  versioning_and_changelog.md
conductor/: tracks.md
docs/: API_DOCUMENTATION.md  Astrolo_Mandala_算法详解.md  HUMAN_DESIGN_API_INTERFACE_DOCUMENTATION.md  Project_Architecture_Blueprint.md
routers/: composite.py  general.py  transits.py
schemas/: input_models.py
tests/: README.md  analyze_chen_transits.py  calculate_chen.py  chen_huijun_transit_2026_02_08.json  chen_huijun_v2_data.json  debug_defaults.py  debug_phase3.py  debug_v2.py  generate_chen_bodygraph.py  reproduce_error.py  test_api_smoke.py  test_calculate_updates.py  test_core_calculations.py  test_data.md  test_dependency_health.py  test_health.py  test_hybrid_api.py  test_hybrid_logic.py  test_hybrid_schemas.py  test_input_validation.py  test_maia_penta_10x.py  test_maia_penta_tier2.py  test_nodal_synergy.py  test_penta.py  test_router_penta.py  test_schemas.py  test_transits_endpoint.py  test_transits_metadata_v181.py  test_transits_structure.py  test_utils_calculations.py  test_v1_regression.py  test_v2_advanced.py  (+7 more)
(+45 files in other folders)
